--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="/src/assets/css/style.css"> -->
-     
+    <link rel="stylesheet" href="https://paytech.sn/cdn/paytech.min.css">
+    <script src="https://paytech.sn/cdn/paytech.min.js"></script>
+
     <title>Vite App</title>
   </head>
   <body>
